--- a/gym2.html
+++ b/gym2.html
@@ -12,9 +12,9 @@
     </header>
     <nav>
         <ul>
-            <li><a href="http://127.0.0.1:5500/gym.html">Home</a></li>
-            <li><a href="http://127.0.0.1:5500/time.html">Timetable</a></li>
-            <li><a href="http://127.0.0.1:5500/equipment.html">Equipment Complaints</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="time.html">Timetable</a></li>
+            <li><a href="equipment.html">Equipment Complaints</a></li>
             <li><a href="#">Feedback</a></li>
         </ul>
     </nav>
