--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <h1>AIT FITNESS CLUB</h1>
                 <h2>TRAIN THE FIGHTER IN YOU</h2>
                 
-                <a href="http://127.0.0.1:5500/gym1.html" class="cta-button">LOGIN & TRY THIS FOR FREE</a>
+                <a href="gym1.html" class="cta-button">LOGIN & TRY THIS FOR FREE</a>
             </div>
         </section>
     </main>
