--- a/gym1.html
+++ b/gym1.html
@@ -16,7 +16,7 @@
             <div class="input-container">
                 <input type="password" placeholder="Password" required>
             </div>
-            <a href="http://127.0.0.1:5500/gym2.html" id="login">Login</a>
+            <a href="gym2.html" id="login">Login</a>
     </div>
 
     <script src="gym1.js"></script>
