--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <nav class="nav">
     <li>Home</li>
-    <a href="https://fitnessfirst.net.in/"><li>Clubs</li></a>
+    <a href="https://fitnessfirst.net.in/"><li style="color: aliceblue;">Clubs</li></a>
     <li>Contact us</li>
     <p id="login"> LOGIN
        <a href="index1.html"><button  id="button" > JOIN NOW</button></p></a>
