--- a/index1.html
+++ b/index1.html
@@ -40,11 +40,11 @@
         </div>
             <div class="div1"><div class="box1">
                         <img  src="streagth.jpg"  alt="" >  
-                          <button class="button2" disabled="disabled">STREANGTH TRANING</button>
+                       <a href="https://strengthgym.in/">    <button class="button2" disabled="disabled">STREANGTH TRANING</button></a>
             </div>
         <div  class="box2">
 <img src="yoga.jpg" alt="">
-<button class="button2" disabled="disabled">YOGA CLASSES</button>
+ <a href="https://gympik.com/articles/5-best-yoga-classes-in-mumbai/"><button class="button2" disabled="disabled">YOGA CLASSES</button></a>
         </div>
     <div  class="box3">
 <img src="cardio.jpg" alt="">
